--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  background-color: #1E2024;
+  max-width: max-content;
+  margin: auto;
+}
+
+.main--content{
+  width: 400px;
+  background-color: #17191D;
+  margin-top: 15px;
+}
+/*Info Component*/
+.info{
+  color: #fff;
+  text-align: center;
+}
+.headshot{
+  width: 100%;
+}
+
+.info--name{
+  color: #fff;
 }
