--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ button > a{
 
 /* About */
 .about, .interest{
-  margin-top: 1.5rem;
+  margin-top: 1em;
   margin-bottom: 0.1rem;
   padding: 1.18em;
   color: #fff;
@@ -122,3 +122,22 @@ button > a{
   font-size: 0.85em;
 }
 
+
+/* Footer */
+footer{
+  background-color: #141417;
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.5em;
+}
+
+footer > a {
+  color: #6F6E77;
+  margin-right: 1em;
+  text-decoration: none;
+
+}
+
+footer > a:last-child{
+  margin-right: 0;
+}
