--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ body{
   width: 280px;
   background-color: #17191D;
   margin-top: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+
 }
 /*Info Component*/
 .info{
@@ -24,7 +29,8 @@ body{
 }
 .headshot{
   width: 100%;
-  height: 100%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .info--name{
@@ -33,6 +39,7 @@ body{
   font-weight: normal;
   font-size: 20px;
   margin-bottom: 0.1rem;
+  margin-top: 0.4em;
 }
 .info--title{
   font-family: 'Lato', sans-serif;
@@ -112,7 +119,7 @@ button > a{
 
 .about--title, .interest--title{
   margin-left: 0;
-  font-size: 1.5rem;
+  font-size: 1em;
   font-weight: normal;
 }
 
@@ -129,6 +136,8 @@ footer{
   padding: 1rem;
   text-align: center;
   font-size: 1.5em;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 footer > a {
